--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -1,10 +1,10 @@
 .form {
   margin-bottom: 5rem;
   color: white;
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 .form-group {
-  margin-top: 3rem;
+  margin-top: 1rem;
 }
 .submit-button {
   margin-top: 1rem;
