--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,4 +5,5 @@
 .header-container {
   padding: 1rem;
   color: aliceblue;
+  margin-bottom: 5rem;
 }
